# crypto-fear-and-greed-index-notifier

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
crypto_fear_and_greed_index_notifier/: coinglass.py  main.py
