[tool.poetry]
name = "crypto-fear-and-greed-index-notifier"
version = "0.1.0"
description = ""
authors = ["mopeneko <mopeneko@lem0n.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
